--- a/src/E-CommerceAdmin/pages/Seller/Seller.css
+++ b/src/E-CommerceAdmin/pages/Seller/Seller.css
@@ -1,4 +1,4 @@
-/* .container{
+.container{
     display: flex;
     text-align: center;
     margin: 2px;
@@ -10,15 +10,15 @@
     border:0.4px solid black;
     height:25px;
     width:25px;
-} */
-/* .btn-float-right{
-    background-color: #19376D;
+} 
+ .btn-float-right{
+    background-color: #ecf0f7;
     color: white;
     border-radius: 2px;
     height: 30px;
     width: 93px;
     
-} */
-button{
-    background-color: #19376D;
 }
+button{
+    background-color: #f1f4fa;
+} 
